# test-raining-deltas

./: README.md  raining-deltas.cabal
app/: Main.hs
data/: input001.txt  input002.txt  input003.txt
src/: Lib.hs
src/Lib/: Parsers.hs  Types.hs
