name:                raining-deltas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/raining-deltas
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          
copyright:           2017 Marco Zocca
category:            Math, Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Lib.Types
  other-modules:       Lib.Parsers
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , filepath
                     , vector
                     , mtl
                     , mwc-random
                     , primitive

executable raining-deltas
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , raining-deltas

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raining-deltas
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/test-raining-deltas
